Fixed tetris color contrast issue

--- a/css/page_format.css
+++ b/css/page_format.css
@@ -176,17 +176,17 @@ span {
 
 .tetris-e {
     /* orange */
-    color: #FF7F2A;
+    color: #E53935;
 }
 
 .tetris-t2 {
     /* yellow */
-    color: #F4C300;
+    color: #0E6BA9;
 }
 
 .tetris-r {
     /* green */
-    color: #4CAF50;
+    color: #369639;
 }
 
 .tetris-i {
